--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -9,16 +9,27 @@
                 type="com.hiraok.twitcasting_sample.MovieListAdapter"/>
 
         <variable
-                name="viewmodel"
+                name="viewModel"
                 type="com.hiraok.twitcasting_sample.MovieListViewModel"/>
     </data>
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adapter="@{adapter}"
-            app:viewmodel="@{viewmodel.movieList}">
-    </androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:adapter="@{adapter}"
+                app:viewmodel="@{viewModel.movieList}"
+                android:orientation="vertical"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
