--- a/app/src/main/res/layout/movielist_item.xml
+++ b/app/src/main/res/layout/movielist_item.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
                 name="data"
                 type="com.hiraok.twitcasting_sample.Movie"/>
@@ -11,13 +12,13 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         <com.google.android.exoplayer2.ui.PlayerView
                 android:id="@+id/playerView"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:resize_mode="fit"
+                android:layout_height="250dp"
+                app:use_controller="false"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>
@@ -27,10 +28,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/playerView"
-                android:paddingStart="10dp"
-                android:text="@{data.userId.id}"
+                app:layout_constraintTop_toTopOf="@id/playerView"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/playerView"
+                app:layout_constraintVertical_bias="0.95"
+                android:text="@{data.userId.id}"
                 tools:text="/@iwapippi"/>
 
 
