--- a/app/src/main/res/layout/movielist_item.xml
+++ b/app/src/main/res/layout/movielist_item.xml
@@ -7,33 +7,33 @@
 
         <variable
                 name="data"
-                type="com.hiraok.chobit_casting.domain.Movie"/>
+                type="com.peionet.chobit_casting.domain.Movie" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <com.google.android.exoplayer2.ui.PlayerView
-                android:id="@+id/playerView"
-                android:layout_width="0dp"
+        <ImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="match_parent"
                 android:layout_height="250dp"
-                app:use_controller="false"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                app:layout_constraintTop_toTopOf="@id/playerView"
+                app:layout_constraintTop_toTopOf="@id/thumbnail"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/playerView"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_bias="0.95"
                 android:text="@{data.userId.id}"
-                tools:text="/@iwapippi"/>
+                tools:text="/@iwapippi" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
